[tool.poetry]
name = "stork"
version = "0.1.0"
description = ""
authors = ["Frederik Aalund <fpa@sbtinstruments.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
pyserial = "^3.5"
py3tftp = "^1.2.3"
cryptography = "^3.4.6"
PySimpleGUI = {version = "^4.38.0", optional = true}
smbus2 = "^0.4.1"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.18.0"

[tool.poetry.extras]
"gui" = ["PySimpleGUI"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
