[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Frederik Aalund <fpa@sbtinstruments.com>"]
description = ""
name = "wright"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# PyQt5 = {version = "=5.15.1", optional = true}
# qasync = {version = "^0.22.0", optional = true}
# QtAwesome = {version = "^1.1.1", optional = true}
# matplotlib = {version = "^3.5.2", optional = true}
anyio = "^4.4.0"
rpi-gpio = "^0.7.1"
pyserial = "^3.5"
# We fixate asyncssh at 2.14.2 until the following issue is resolved:
# https://github.com/ronf/asyncssh/issues/678
asyncssh = "2.14.2"
# We fixate cryptography at 42.0.8 until the following issue is resolved:
# https://github.com/ronf/asyncssh/issues/674
cryptography = "42.0.8"
libconf = "^2.0.1"
typer = "^0.12.3"
smbus2 = "^0.4.3"
pydantic = "^2.8.2"
py3tftp = "^1.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.7"


[tool.poetry.extras]
"gui" = ["PyQt5", "qasync", "QtAwesome", "matplotlib"]

# [[tool.poetry.source]]
# name = "piwheels"
# url = "https://www.piwheels.org/simple/"
# priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.poetry.scripts]
shipyard-gui = 'wright.gui:gui'
